--- a/index.html
+++ b/index.html
@@ -3,12 +3,13 @@
   <head>
     <meta charset="UTF-8" />    
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link href="https://fonts.googleapis.com/css2?family=Muli&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./styles/main.css">
     <title>Document</title>
   </head>
   <body>
     <header class="header">      
-        <img width="100" src="https://www.udemy.com/staticx/udemy/images/v6/logo-coral.svg"  alt="">
+        <img width="120" src="https://www.udemy.com/staticx/udemy/images/v6/logo-coral.svg"  alt="">
         <nav class="menu">
           <ul class="menu__list">
             <li class="menu__items"><a class="menu__link" href="#">Home</a></li>
