--- a/index.html
+++ b/index.html
@@ -1,30 +1,79 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />    
+    <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link href="https://fonts.googleapis.com/css2?family=Muli&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="./styles/main.css">
+    <link
+      href="https://fonts.googleapis.com/css2?family=Muli&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="./styles/main.css" />
     <title>Document</title>
   </head>
   <body>
-    <header class="header">      
-        <img width="120" src="https://www.udemy.com/staticx/udemy/images/v6/logo-coral.svg"  alt="">
-        <nav class="menu">
-          <ul class="menu__list">
-            <li class="menu__items"><a class="menu__link" href="#">Home</a></li>
-            <li class="menu__items"><a class="menu__link" href="#">Gallery</a></li>
-            <li id="dropBtn" class="menu__items">
-              <a class="menu__link" href="#">Cursos</a>
-              <div id="dropdownContent" class="menu__dropdown">
-                <a class="dropdownContent__link" href="#">Git</a>
-                <a class="dropdownContent__link" href="#">Angular</a>
-                <a class="dropdownContent__link" href="#">Express</a>              
-              </div>
-            </li>
-          </ul>
-        </nav>      
-    </header>    
+    <header class="header">
+      <img
+        width="120"
+        src="https://www.udemy.com/staticx/udemy/images/v6/logo-coral.svg"
+        alt=""
+      />
+      <nav class="menu">
+        <ul class="menu__list">
+          <li class="menu__items"><a class="menu__link" href="#">Home</a></li>
+          <li class="menu__items">
+            <a class="menu__link" href="#">Gallery</a>
+          </li>
+          <li id="dropBtn" class="menu__items">
+            <a class="menu__link" href="#">Cursos</a>
+            <div id="dropdownContent" class="menu__dropdown">
+              <a class="dropdownContent__link" href="#">Git</a>
+              <a class="dropdownContent__link" href="#">Angular</a>
+              <a class="dropdownContent__link" href="#">Express</a>
+            </div>
+          </li>
+        </ul>
+      </nav>
+    </header>
+    <main>
+      <div id="menuAcordion">
+        <button id="btnAcordion" class="btnAcordion">Covid-19</button>
+        <div id="acordionContent" class="acordionContent">
+          <p>
+            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Sapiente,
+            neque dolorum? Id qui in nulla laboriosam veritatis? Vero aut
+            aperiam iure animi quos voluptate in, distinctio pariatur eius,
+            laboriosam quasi?. Lorem ipsum dolor sit amet consectetur
+            adipisicing elit. Corrupti fuga mollitia, fugiat deleniti provident
+            vero pariatur velit possimus magnam id ut placeat doloremque autem
+            ratione unde ipsam iste illo natus!
+          </p>
+        </div>
+        <button id="btnAcordion" class="btnAcordion">Covid-19</button>
+        <div class="acordionContent">
+          <p>
+            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Sapiente,
+            neque dolorum? Id qui in nulla laboriosam veritatis? Vero aut
+            aperiam iure animi quos voluptate in, distinctio pariatur eius,
+            laboriosam quasi?. Lorem ipsum dolor sit amet consectetur
+            adipisicing elit. Corrupti fuga mollitia, fugiat deleniti provident
+            vero pariatur velit possimus magnam id ut placeat doloremque autem
+            ratione unde ipsam iste illo natus!
+          </p>
+        </div>
+        <button id="btnAcordion" class="btnAcordion">Covid-19</button>
+        <div class="acordionContent">
+          <p>
+            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Sapiente,
+            neque dolorum? Id qui in nulla laboriosam veritatis? Vero aut
+            aperiam iure animi quos voluptate in, distinctio pariatur eius,
+            laboriosam quasi?. Lorem ipsum dolor sit amet consectetur
+            adipisicing elit. Corrupti fuga mollitia, fugiat deleniti provident
+            vero pariatur velit possimus magnam id ut placeat doloremque autem
+            ratione unde ipsam iste illo natus!
+          </p>
+        </div>
+      </div>
+    </main>
     <script src="./js/app.js"></script>
   </body>
 </html>
