--- a/index.html
+++ b/index.html
@@ -36,40 +36,51 @@
     </header>
     <main>
       <div id="menuAcordion">
-        <button id="btnAcordion" class="btnAcordion">Covid-19</button>
+        <button id="btnAcordion" class="btnAcordion">
+          ¿Qué es coronavirus?
+        </button>
         <div id="acordionContent" class="acordionContent">
           <p>
-            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Sapiente,
-            neque dolorum? Id qui in nulla laboriosam veritatis? Vero aut
-            aperiam iure animi quos voluptate in, distinctio pariatur eius,
-            laboriosam quasi?. Lorem ipsum dolor sit amet consectetur
-            adipisicing elit. Corrupti fuga mollitia, fugiat deleniti provident
-            vero pariatur velit possimus magnam id ut placeat doloremque autem
-            ratione unde ipsam iste illo natus!
+            Los coronavirus son una extensa familia de virus que pueden causar
+            enfermedades tanto en animales como en humanos. En los humanos, se
+            sabe que varios coronavirus causan infecciones respiratorias que
+            pueden ir desde el resfriado común hasta enfermedades más graves
+            como el síndrome respiratorio de Oriente Medio (MERS) y el síndrome
+            respiratorio agudo severo (SRAS). El coronavirus que se ha
+            descubierto más recientemente causa la enfermedad por coronavirus
+            COVID-19
           </p>
         </div>
-        <button id="btnAcordion" class="btnAcordion">Covid-19</button>
+        <button id="btnAcordion" class="btnAcordion">¿Qué es COVID-19</button>
         <div class="acordionContent">
           <p>
-            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Sapiente,
-            neque dolorum? Id qui in nulla laboriosam veritatis? Vero aut
-            aperiam iure animi quos voluptate in, distinctio pariatur eius,
-            laboriosam quasi?. Lorem ipsum dolor sit amet consectetur
-            adipisicing elit. Corrupti fuga mollitia, fugiat deleniti provident
-            vero pariatur velit possimus magnam id ut placeat doloremque autem
-            ratione unde ipsam iste illo natus!
+            La COVID‑19 es la enfermedad infecciosa causada por el coronavirus
+            que se ha descubierto más recientemente. Tanto este nuevo virus como
+            la enfermedad que provoca eran desconocidos antes de que estallara
+            el brote en Wuhan (China) en diciembre de 2019. Actualmente la
+            COVID‑19 es una pandemia que afecta a muchos países de todo el
+            mundo.
           </p>
         </div>
-        <button id="btnAcordion" class="btnAcordion">Covid-19</button>
+        <button id="btnAcordion" class="btnAcordion">
+          ¿Qué debo hacer si tengo síntomas de COVID-19 y cuándo he de buscar
+          atención médica?
+        </button>
         <div class="acordionContent">
           <p>
-            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Sapiente,
-            neque dolorum? Id qui in nulla laboriosam veritatis? Vero aut
-            aperiam iure animi quos voluptate in, distinctio pariatur eius,
-            laboriosam quasi?. Lorem ipsum dolor sit amet consectetur
-            adipisicing elit. Corrupti fuga mollitia, fugiat deleniti provident
-            vero pariatur velit possimus magnam id ut placeat doloremque autem
-            ratione unde ipsam iste illo natus!
+            Si tiene síntomas leves, como tos o fiebre leves, generalmente no es
+            necesario que busque atención médica. Quédese en casa, aíslese y
+            vigile sus síntomas. Siga las orientaciones nacionales sobre el
+            autoaislamiento. Sin embargo, si vive en una zona con paludismo
+            (malaria) o dengue, es importante que no ignore la fiebre. Busque
+            ayuda médica. Cuando acuda al centro de salud lleve mascarilla si es
+            posible, manténgase al menos a un metro de distancia de las demás
+            personas y no toque las superficies con las manos. En caso de que el
+            enfermo sea un niño, ayúdelo a seguir este consejo. Busque
+            inmediatamente atención médica si tiene dificultad para respirar o
+            siente dolor o presión en el pecho. Si es posible, llame a su
+            dispensador de atención de la salud con antelación para que pueda
+            dirigirlo hacia el centro de salud adecuado.
           </p>
         </div>
       </div>
