--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
             COVID-19
           </p>
         </div>
-        <button id="btnAcordion" class="btnAcordion">¿Qué es COVID-19</button>
+        <button id="btnAcordion" class="btnAcordion">¿Qué es COVID-19?</button>
         <div class="acordionContent">
           <p>
             La COVID‑19 es la enfermedad infecciosa causada por el coronavirus
