--- a/index.html
+++ b/index.html
@@ -83,8 +83,28 @@
             dirigirlo hacia el centro de salud adecuado.
           </p>
         </div>
-      </div>
+      </div>      
     </main>
+
+    <section class="reto-3">
+      <div class="registration">
+        <h3>Get more courses !!!</h3>
+        <p>Si quieres recibir más información acerca del curso, por favor click aquí:</p>
+        <button class="btnModal">Register</button>
+      </div>       
+    </section>
+
+    <div class="modalWindow">
+      <div class="modal">
+        <h2>Registration</h2>
+        <input type="text" name="name" placeholder="Nombre">
+        <input type="text" name="name" placeholder="Apellido">
+        <input type="email" name="email" placeholder="Correo">
+        <input type="num" name="email" placeholder="Celular">
+        <button class="register">Inscribirse</button>
+        <button class="close">X</button>
+      </div>
+    </div>
     <script src="./js/app.js"></script>
   </body>
 </html>
